# ChangeLog for media-sound/ardour
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 Mar 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  ardour-3.9999.ebuild:
  Use python eclass so that the correct python ABI is used.

  18 Mar 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  ardour-3.9999.ebuild:
  Fix version of some dependencies (closes #0000142). Thanks to jauthu for
  reporting the bug.

  16 Mar 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  ardour-3.9999.ebuild:
  Move to the new git repository.
  Move to waf-utils eclass.
  Remove unneeded eclasses.
  Update EAPI to 5.
  Cleanup.

  08 Mar 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  ardour-3.9999.ebuild:
  Sorted dependencies. Added dependency on dev-libs/serd. Removed bad 
  characters from my ChangeLog messages.

  30 Dec 2012; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  ardour-3.9999.ebuild:
  Fixed the ambigous "--doc" flag, replaced with "--docs"
  Thanks to Jannis Achstetter for reporting this

  28 Dec 2012; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  ardour-2.9999.ebuild:
  Fixed some dependencies (depend on virtual packages)

  09 Dec 2012; Karl Linden <lilrc@users.sourceforge.net>
  ardour-3.9999.ebuild: fixed broken wiimote support and made ebuild
  more verbose. Thanks to Ulrich-Lorenz Schlüter

  21 Nov 2012; Dominique Michel <dominique_libre@sourceforge.net>
  ardour-3.9999.ebuild: renamed icon file to ardour3.png due to file collision
  with ardour2 from portage

  21 Nov 2012; Karl Linden (lilrc) <spray.sucks@gmail.com>
  ardour-3.9999.ebuild, metadata.xml:
  Fixed some dependencies (depend on virtual packages and added conditional
    dependency on drobilla-9999)
  Removed the "lxvst" USE flag and added the "doc" USE flag
  Added desktop entry and made ebuild install icons
  Removed "no-herd" from metadata

  22 Jun 2012; Frieder Buerzele <evermind@tuxfamily.org> ardour-3.9999.ebuild: