@@ -4,6 +4,6 @@ AUX ardour-2.7.1-gcc44.patch 1418 SHA256 4473008fcec6d619301202ff6d12024eb08653e
 DIST ardour-2.8.11.tar.bz2 3322518 SHA256 6a743f42b795bb66179dd467c9b8e417e99d38fa915159155dd582709b563b73
 EBUILD ardour-2.8.11.ebuild 3985 SHA256 53fa87aaa2d862c60aba684e3f6caf03fd4645645d19cb7a70c8904f566de395 SHA512 5350b4a2f13dddb4f6e526eea93fe90ca4a7a9da6f66f20447ac717fd6733648f0c6d6bf4d816ee5b7ad1dfe26cd9213dcba14ecd723727dec629adc8a12b79e WHIRLPOOL ef6fecadf109afeb537d184f64e3baf72d0ae6c6a5ce419d6ac3b952f11bd49354be6a786eb32b4303d61cba3860de7d1f60c61defbe0b6bb92bd9a02f037abf
 EBUILD ardour-2.9999.ebuild 4014 SHA256 2bcd464a3ad3e9673ff958f9ad27a37621449893620686d2a32a2694929a412f SHA512 d05f4ab09ba5161d66cbac045f60cc4f1e852b98f8a67be8c06b39029b955636e8cac24c9fab69425b609fac19341c0a8f4b2274cd0f434b284f4ccde1ad6aa2 WHIRLPOOL b7d420623e92f02d4b2847013e341e00dae28a34491e0c74306f9e5d1cc1caa51347db64e6de02692022ed65d271f48865734fd8c494081668b126affcefe44b
-EBUILD ardour-3.9999.ebuild 2699 SHA256 0b9a56d2021b376a17cb83e968f362bc8863a117538eb10c7e72c0adb00aa8ec SHA512 0de445d7102964960f93312a9403b62912637b88b658a3b54b595ef842f3e2f8df1e457e6e47b0c868b430d406bfb275d0c43d59e1017d1ba80dd0bf67088118 WHIRLPOOL a354c0949ebce5001d5d7ac663319894ddb60d2c4ad9e129991999a2fc2dbf8b40f03e4402287e82745530757f515adf01aa4e323d2c0f0d9d693e134349b330
-MISC ChangeLog 7104 SHA256 16e5513d77443c68d3acb5e631546d5039270b91751e6f447085cf0aece8d5d1 SHA512 d6e7d52a8bed9fa5832e76507baa7f71a9831737eaa684e43512f8174e467742bc1dfa6c2f418beba7483b3a3da3a0de384059f2af676c672c5bb478696d45b5 WHIRLPOOL e78e1bf97989a08600419c6b93006e70eccc6cbfa27b35ea33e0d1c4f72e0e4739220157c1f7278cff013913b1c3e8a4cdb40c103c3243fdb0437f258d53811d
+EBUILD ardour-3.9999.ebuild 2467 SHA256 b1795ba78bccebfa3f323feed3cfddb9a91bfb8c84f28f573058476d625f1c18 SHA512 2f35f7c76dc1c6c28af8d8bf79c1ab7a97db17fa7ceb37029d35db5a02bd2b5d97cfefeb036253d591adeb9b6ea42a2bcb4a1a677851f5a75c2e13d7189d743a WHIRLPOOL 7f39c8c55a6846cc99cb65e15a8c029aa898fbf3a46a8eaca1f32b3a67356a0b53a5267b2a676df49633fcd4303804c0458e5be2cf29f71631e01f02ed714139
+MISC ChangeLog 7394 SHA256 d547cce8831657c133b75c5a1f23817a4e538fedf623de14fa47d8a221fe2c0d SHA512 db0d45b882dda92d59a1f83aab755a778656af8be8e7a7bfc610b84e3cdaf19202e0cef6b41a93c13982a1c3b8ce7798049dd595fb1185afd60dceca2a56630c WHIRLPOOL 423b220b4d9de3de76ef2815d9ecfc617a5ce0d9a9270c186a0c9c83de135a2ad1bedfcf6473e50a2e04adf5684054f78cce678f6dcaa1dd06cc8c6b3a4ceeb5
 MISC metadata.xml 1118 SHA256 6182c09084546eb57544ede9cc395628adfcf54cdcc5981b2ad7edbd50ce999c SHA512 c5adeb20a0104a02820a5afa05324234bb7a049884956a9b3bb8d0fcca67ee187f54f40ed1ff4dd3703fcd8b293ebcb77ef7a4f372f69f98a89871ed28f1485a WHIRLPOOL 58622a42d7d343b1884da8a671e7994530d6ddb5a31098b86d20d80ff59fba2f931d36c03931b4bc3b3f056f0070ceb69eb3927cd4253b9d68328c55df5db331
